[gd_scene load_steps=26 format=3 uid="uid://baeordbg1uh38"]

[ext_resource type="PackedScene" uid="uid://nqian85nbat2" path="res://Assets/Ultimate Platformer Pack - Dec 2021/Nature/glTF/Fruit.gltf" id="1_j7r1e"]
[ext_resource type="Script" uid="uid://dglecgyll5me8" path="res://Scripts/menu.gd" id="1_x5f3s"]
[ext_resource type="PackedScene" uid="uid://2mnhuh6pymar" path="res://Assets/Ultimate Platformer Pack - Dec 2021/Nature/glTF/Tree_Fruit.gltf" id="2_8inha"]
[ext_resource type="PackedScene" uid="uid://dnbjn3blfknxx" path="res://Assets/Ultimate Platformer Pack - Dec 2021/Nature/glTF/Bush.gltf" id="3_n2mnh"]
[ext_resource type="Texture2D" uid="uid://ceqf60a4yumpn" path="res://Assets/Images/clouds_anime_6k.jpg" id="4_x5f3s"]
[ext_resource type="PackedScene" uid="uid://dh41o6khjonig" path="res://Scenes/character_menu.tscn" id="5_8inha"]
[ext_resource type="PackedScene" uid="uid://b6irxecvmt1vy" path="res://Scenes/laporta.tscn" id="5_n2mnh"]
[ext_resource type="FontFile" uid="uid://dx16jxvxpikku" path="res://Resources/Utils/chalkboard.ttf" id="8_7qvly"]
[ext_resource type="StyleBox" uid="uid://t43ed07sxino" path="res://Resources/Utils/HoverButton.tres" id="9_rfqti"]
[ext_resource type="StyleBox" uid="uid://co4lgbj6366pm" path="res://Resources/Utils/enterButton.tres" id="10_g8i7c"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_uwxxs"]
noise_type = 5
frequency = 1.0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_qwfkq"]
noise = SubResource("FastNoiseLite_uwxxs")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_i081d"]
albedo_color = Color(0.176471, 0.407843, 0.160784, 1)
albedo_texture = SubResource("NoiseTexture2D_qwfkq")

[sub_resource type="BoxMesh" id="BoxMesh_m6csd"]
size = Vector3(16, 1, 16)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_x5f3s"]
points = PackedVector3Array(-8, -0.5, -8, -8, 0.5, -8, 8, -0.5, -8, -8, -0.5, 8, -8, 0.5, 8, 8, 0.5, -8, 8, -0.5, 8, 8, 0.5, 8)

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_qok0p"]
panorama = ExtResource("4_x5f3s")

[sub_resource type="Sky" id="Sky_7qvly"]
sky_material = SubResource("PanoramaSkyMaterial_qok0p")

[sub_resource type="Environment" id="Environment_3fcxt"]
background_mode = 2
sky = SubResource("Sky_7qvly")

[sub_resource type="BoxShape3D" id="BoxShape3D_uwxxs"]
size = Vector3(4.01804, 1, 1.69434)

[sub_resource type="BoxShape3D" id="BoxShape3D_qwfkq"]
size = Vector3(3.91742, 1, 1.29492)

[sub_resource type="BoxShape3D" id="BoxShape3D_x5f3s"]
size = Vector3(16.1448, 4.95682, 1.97363)

[sub_resource type="FontVariation" id="FontVariation_23t3j"]
base_font = ExtResource("8_7qvly")
variation_embolden = 2.0

[sub_resource type="SystemFont" id="SystemFont_7qvly"]
font_names = PackedStringArray("Ebrima")

[sub_resource type="FontVariation" id="FontVariation_rfqti"]
base_font = SubResource("SystemFont_7qvly")

[sub_resource type="Theme" id="Theme_5ti5v"]
default_font = SubResource("FontVariation_rfqti")
Button/font_sizes/font_size = 22
Label/colors/font_color = Color(1, 1, 0.152941, 1)
Label/colors/font_outline_color = Color(0.856494, 1.97336e-06, 1.92523e-07, 1)
Label/fonts/font = SubResource("FontVariation_23t3j")

[node name="Menu" type="Node3D"]
transform = Transform3D(0.5, 0, -0.866026, 0, 1, 0, 0.866026, 0, 0.5, 0, 0, 0)
script = ExtResource("1_x5f3s")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.412059, -0.570303, 0.948689)
layers = 9
material_override = SubResource("StandardMaterial3D_i081d")
mesh = SubResource("BoxMesh_m6csd")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D"]
collision_layer = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_x5f3s")

[node name="Ornament" type="Node3D" parent="."]

[node name="Fruit2" parent="Ornament" instance=ExtResource("1_j7r1e")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.27532, 0, -1.35185)

[node name="Fruit3" parent="Ornament" instance=ExtResource("1_j7r1e")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.11661, -1.19209e-07, -2.33791)

[node name="Fruit4" parent="Ornament" instance=ExtResource("1_j7r1e")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.34518, 1.19209e-07, -5.22797)

[node name="Tree_Fruit2" parent="Ornament" instance=ExtResource("2_8inha")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.49819, 0, -4.96028)

[node name="Bush2" parent="Ornament" instance=ExtResource("3_n2mnh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.180304, 0, -4.35898)

[node name="Settings" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Settings"]
environment = SubResource("Environment_3fcxt")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Settings"]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 4.43269, 0)
shadow_enabled = true

[node name="Camera3D" type="Camera3D" parent="Settings"]
transform = Transform3D(0.719909, 0, 0.694068, 0, 1, 0, -0.694068, 0, 0.719909, 8.30335, 2.32573, 9.86418)

[node name="DoorCreate" parent="Settings" instance=ExtResource("5_n2mnh")]
transform = Transform3D(0.220391, 0, 0.975412, 0, 1, 0, -0.975412, 0, 0.220391, -2.58382, 0, 4.76778)
label = "HAGASE"

[node name="Area3D" type="Area3D" parent="Settings/DoorCreate"]
collision_layer = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Settings/DoorCreate/Area3D"]
transform = Transform3D(1, 0, -2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, 0.0991468, 0, -2.09878)
shape = SubResource("BoxShape3D_uwxxs")

[node name="DoorJoin" parent="Settings" instance=ExtResource("5_n2mnh")]
transform = Transform3D(0.975261, 0, 0.221055, 0, 1, 0, -0.221055, 0, 0.975261, 2.99106, 0, 1.22699)
label = "UNASE"

[node name="Area3D" type="Area3D" parent="Settings/DoorJoin"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Settings/DoorJoin/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0193787, 0, -1.81119)
shape = SubResource("BoxShape3D_qwfkq")

[node name="StaticBody3D" type="StaticBody3D" parent="."]
collision_layer = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.425903, 2.22137, 8.04215)
shape = SubResource("BoxShape3D_x5f3s")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.425903, 0, -6.29764)
shape = SubResource("BoxShape3D_x5f3s")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(-0.00123922, 0, -0.999999, 0, 1, 0, 0.999999, 0, -0.00123922, 7.51525, 1.08421, 0.912595)
shape = SubResource("BoxShape3D_x5f3s")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(-0.00123922, 0, -0.999999, 0, 1, 0, 0.999999, 0, -0.00123922, -7.62366, 1.21753, 0.866688)
shape = SubResource("BoxShape3D_x5f3s")

[node name="Character_menu" parent="." instance=ExtResource("5_8inha")]
transform = Transform3D(0.771727, 0.632531, 0.0659036, 0.103841, -0.023093, -0.994326, -0.62742, 0.774191, -0.083504, 4.20832, -0.0555897, 6.10377)

[node name="GUI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="GUI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_5ti5v")

[node name="MarginContainer" type="MarginContainer" parent="GUI/Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/Control/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="GUI/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "RABBIT ROYALE
SUPER TURBO 
CHAMPIONSHIP
EDITION"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Entré" type="Button" parent="GUI/Control/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_styles/hover = ExtResource("9_rfqti")
theme_override_styles/normal = ExtResource("10_g8i7c")
text = "Entrele"

[node name="Obtions" type="Button" parent="GUI/Control/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_styles/hover = ExtResource("9_rfqti")
theme_override_styles/normal = ExtResource("10_g8i7c")
text = "Opcionele"

[node name="Sortir" type="Button" parent="GUI/Control/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_styles/hover = ExtResource("9_rfqti")
theme_override_styles/normal = ExtResource("10_g8i7c")
text = "Salgase ¡CHU! ¡CHU!"

[connection signal="body_entered" from="Settings/DoorCreate/Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="pressed" from="GUI/Control/MarginContainer/VBoxContainer/VBoxContainer/Entré" to="." method="_on_entré_pressed"]
[connection signal="pressed" from="GUI/Control/MarginContainer/VBoxContainer/VBoxContainer/Obtions" to="." method="_on_obtion_pressed"]
[connection signal="pressed" from="GUI/Control/MarginContainer/VBoxContainer/VBoxContainer/Sortir" to="." method="_on_sortir_pressed"]
